@@ -1,3 +1,6 @@
+* Sun Sep 23 2012 Dan Prince <dprince@redhat.com> - 1.1.3
+  - Add support for per project job types in the config file.
+
 * Sun July 29 2012 Dan Prince <dprince@redhat.com> - 1.1.2
   - Add --branch option to stream task.
 
